# Agentic-RAG-Medical-care-Assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEV_SPEC.md  EL_DESIGN_REVIEW.md  LICENSE  LLM_4bit_load test.py  README.en.md  README.md  RETRIEVAL_EVAL.md  alembic.ini  convert_and_check.py  docker-compose.demo.yml  docker-compose.yml  downlowd.py  login.py  pending tasks.md  pyproject.toml  遇到的问题.markdown  面经八股文.markdown
config/: logging_config.py  milvus_schema.py  settings.py
infra/docker/: Dockerfile.api  nginx.conf
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
scripts/: METHODOLOGY.md  batch_parse_pdfs.sh  derive_chunks_for_pg.py  derive_figure_heading_paths.py  enrichment.py  extract_figures.py  figure_enrichment_generation.py  load_chunk_embeddings_to_milvus.py  load_chunks_to_pg.py  load_enrichment_to_pg.py  load_media_chunks_to_pg.py  load_mineru.py  merge_crosspage_tables.py  merge_multipanel_figures.py  reroute_figure_in_table.py  smoke_terms_retrieval.py  table_enrichment_generation.py  已做好子chunk分块情况.md
scripts/poc_chunking_endocrinology_v4/: METHODOLOGY.md  poc_chunk_book.py  poc_match_body_titles_endocrinology_v4.py
scripts/poc_chunking_内分泌代谢病学_第4版上册/: poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_内科学_第9版/: BOOK_NOTES.md  audit_final_positions.py  audit_step2.py  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_协和呼吸病学_第二版/: BOOK_NOTES.md  audit_step2.py  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_心血管内科学_第3版/: BOOK_NOTES.md  audit_step2.py  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_普通外科/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_泌尿外科/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_消化系统与疾病_第2版/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_神经内科学/: BOOK_NOTES.md  audit_final_positions.py  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_神经外科学/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_胸心外科/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_诊断学_第10版/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
scripts/poc_chunking_骨科/: BOOK_NOTES.md  poc_build_toc_dict.py  poc_chunk_book.py  poc_match_body_titles.py
skills/chunk-enrichment/: SKILL.md
skills/core/: __init__.py  executor.py  loader.py  registry.py
src/: __init__.py  __main__.py
src/agent/: graph.py  state.py
src/api/: app.py
src/common/: metrics.py
src/models/: embedding_model.py  llm_client.py
src/prompts/: agent.py  ingestion.py
terms/: build_icd10.py
tests/integration/: conftest.py  test_admin_routes.py  test_agent_workflow.py  test_alembic_upgrade.py  test_auth_routes.py  test_chunks_crud.py  test_chunks_lookup_figures.py  test_dense_retriever_real.py  test_diagnosis_routes.py  test_dialog_audit_crud.py  test_docs_collection.py  test_llm_client_smoke.py  test_llm_structured_smoke.py  test_mineru_loader_real.py  test_patient_crud.py  test_patient_routes.py  test_query_processing_real.py  test_raw_documents_crud.py  test_reranker_smoke.py  test_sparse_retriever_real.py  test_terms_retrieval_smoke.py
tests/unit/: test_api_app_skeleton.py  test_auth_middleware.py  (+41 more)
(+109 files in other folders)
