[project]
name = "medical-rag"
version = "0.1.0"
description = "Agentic RAG for medical care assistant"
requires-python = ">=3.12,<3.13"

dependencies = [
    # 数据库客户端
    "pymilvus>=2.5.0,<2.6",                # 必须与 docker-compose Milvus v2.5.9 对应
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",

    # 模型推理(RTX 5070 Ti Blackwell 必须 PyTorch>=2.7)
    "torch>=2.7",
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "FlagEmbedding>=1.3",
    "accelerate>=1.0",
    "bitsandbytes>=0.45",                  # 8bit 量化(16GB 卡跑 8B Embedding 必需)

    # Web/API 层(阶段 G)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Agent / LLM(阶段 C/F)
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",               # DashScope OpenAI-兼容接口
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",  # interrupt() 恢复用 PG 持久化 state
    "tiktoken>=0.7",                       # 本地估算 prompt token,做上下文限流

    # 监控(§5.2 / §9.1)
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",

    # Auth(阶段 G2)
    "pyjwt>=2.8",
    "bcrypt>=4.1",                         # 密码哈希(spec §2.4.5 users.password 是哈希后)
    "email-validator>=2.2",                # pydantic EmailStr 依赖

    # 工具
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=9.0",
    "pandas>=2.2",                         # ICD-10 Excel 解析、评测数据处理
    "openpyxl>=3.1",                       # pandas 读 .xlsx 引擎

    # 测试
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.optional-dependencies]
# 文档灌库依赖,只在跑 ingestion ETL 时安装。
# 必须用 mineru[pipeline] 而非 mineru,否则 hybrid-auto-engine / hybrid-vllm-async-engine
# 启动会抛 HybridDependencyError(缺 albumentations / omegaconf / pyclipper 等 10 个小包)。
# pipeline extras 不动 torch / langchain,无冲突。
ingestion = [
    "mineru[pipeline]>=2.5,<4",
]

[tool.uv]
# 默认 PyPI + PyTorch 官方 cu128 索引(Blackwell sm_120 真兼容)
# 注:cu126 wheel 编译时 GPU arch 列表只到 sm_90,RTX 5070 Ti (sm_120) 加载会
# "no kernel image available";Blackwell 必须 cu128+ wheel,跟系统 CUDA toolkit 无关
# (PyTorch wheel 自带 runtime,不读 nvcc)
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
